--- a/app/src/main/res/drawable/ic_orders.xml
+++ b/app/src/main/res/drawable/ic_orders.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="21dp"
+    android:height="23dp"
+    android:viewportWidth="21"
+    android:viewportHeight="23">
+
     <path
-        android:fillColor="#181725"
-        android:pathData="M19,3H5C3.89,3 3,3.9 3,5V19C3,20.1 3.89,21 5,21H19C20.1,21 21,20.1 21,19V5C21,3.9 20.1,3 19,3ZM19,19H5V5H19V19Z"/>
+        android:strokeColor="#181725"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:pathData="M4.50732 1.14722L1.50732 5.14722V19.1472C1.50732 19.6776 1.71804 20.1864 2.09311 20.5614C2.46818 20.9365 2.97689 21.1472 3.50732 21.1472H17.5073C18.0378 21.1472 18.5465 20.9365 18.9215 20.5614C19.2966 20.1864 19.5073 19.6776 19.5073 19.1472V5.14722L16.5073 1.14722H4.50732Z" />
     <path
-        android:fillColor="#181725"
-        android:pathData="M7,7H17V9H7V7Z"/>
+        android:fillColor="#000000"
+        android:strokeColor="#181725"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:pathData="M1.50732 5.14722H19.5073" />
     <path
-        android:fillColor="#181725"
-        android:pathData="M7,11H17V13H7V11Z"/>
-    <path
-        android:fillColor="#181725"
-        android:pathData="M7,15H17V17H7V15Z"/>
+        android:strokeColor="#181725"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:pathData="M14.5073 9.14722C14.5073 10.2081 14.0859 11.2255 13.3358 11.9756C12.5856 12.7258 11.5682 13.1472 10.5073 13.1472C9.44646 13.1472 8.42904 12.7258 7.6789 11.9756C6.92875 11.2255 6.50732 10.2081 6.50732 9.14722" />
 </vector>
