--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,34 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Medlife" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Medlife" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue_500</item>
         <item name="colorPrimaryVariant">@color/blue_700</item>
         <item name="colorOnPrimary">@color/white</item>
+        
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/blue_500</item>
+        <item name="colorSecondaryVariant">@color/blue_700</item>
+        <item name="colorOnSecondary">@color/white</item>
+        
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/blue_900</item>
+        <item name="android:windowLightStatusBar">false</item>
+
+        <!-- Background colors -->
+        <item name="android:colorBackground">@color/blue_900</item>
+        <item name="colorSurface">@color/blue_800</item>
+        <item name="colorOnSurface">@color/white</item>
+
+        <!-- Text appearances -->
+        <item name="textAppearanceHeadline1">@style/TextAppearance.Medlife.Headline1</item>
+        <item name="textAppearanceHeadline2">@style/TextAppearance.Medlife.Headline2</item>
+        <item name="textAppearanceBody1">@style/TextAppearance.Medlife.Body1</item>
+        <item name="textAppearanceBody2">@style/TextAppearance.Medlife.Body2</item>
+
+        <!-- Button styles -->
+        <item name="materialButtonStyle">@style/Widget.Medlife.Button</item>
+        <item name="materialButtonOutlinedStyle">@style/Widget.Medlife.Button.OutlinedButton</item>
 
         <!-- TextInputLayout styling -->
         <item name="boxStrokeColor">@color/blue_500</item>
