--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
     <!-- Adicionados para corrigir erro -->
     <color name="blue_500">#2196F3</color>
     <color name="blue_700">#1976D2</color>
+    <color name="blue_800">#1565C0</color>
+    <color name="blue_900">#0D47A1</color>
 
     <color name="active_color">#1E56A0</color>
     <color name="inactive_color">#181725</color>
