--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,27 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/color1</item>
-        <item name="colorPrimaryDark">@color/color2</item>
-        <item name="colorAccent">@color/color3</item>
-        <!-- Desativa a ActionBar fornecida pelo decorador da janela -->
-        <item name="windowActionBar">false</item>
-        <!-- Necessário para o suporte de ActionBar -->
-        <item name="windowNoTitle">true</item>
+    <!-- Base button style -->
+    <style name="Widget.Medlife.Button" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/gilroysemibold</item>
+        <item name="android:padding">12dp</item>
+        <item name="cornerRadius">8dp</item>
     </style>
 
-    <style name="botaoPadrao" parent="Theme.AppCompat.Light">
-        <item name="colorControlHighlight">#ff404e</item>
-        <item name="colorButtonNormal">@color/color3</item>
-        <item name="android:textColor">@color/color1</item>
-
+    <!-- Outlined button style -->
+    <style name="Widget.Medlife.Button.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textColor">@color/blue_500</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/gilroysemibold</item>
+        <item name="android:padding">12dp</item>
+        <item name="cornerRadius">8dp</item>
+        <item name="strokeColor">@color/blue_500</item>
+        <item name="strokeWidth">1dp</item>
     </style>
-    
-    <style name="BottomNavigationText">
+
+    <!-- Text appearances -->
+    <style name="TextAppearance.Medlife" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:fontFamily">@font/gilroyregular</item>
+    </style>
+
+    <style name="TextAppearance.Medlife.Headline1" parent="TextAppearance.MaterialComponents.Headline1">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/blue_900</item>
+        <item name="android:fontFamily">@font/gilroybold</item>
+    </style>
+
+    <style name="TextAppearance.Medlife.Headline2" parent="TextAppearance.MaterialComponents.Headline2">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/blue_900</item>
+        <item name="android:fontFamily">@font/gilroysemibold</item>
+    </style>
+
+    <style name="TextAppearance.Medlife.Body1" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/blue_900</item>
+        <item name="android:fontFamily">@font/gilroyregular</item>
+    </style>
+
+    <style name="TextAppearance.Medlife.Body2" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/blue_700</item>
+        <item name="android:fontFamily">@font/gilroyregular</item>
+    </style>
+
+    <!-- Bottom Navigation Text -->
+    <style name="BottomNavigationText" parent="TextAppearance.Medlife.Body2">
         <item name="android:textSize">12sp</item>
-        <item name="android:fontFamily">@font/gilroy</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/gilroysemibold</item>
     </style>
-    
 </resources>
