--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:background="@color/background_light">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,10 +17,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/receba_seus_rem_dios_sem_sair_de_casa"
-            android:textSize="24sp"
+            android:textAppearance="@style/TextAppearance.Medlife.Headline2"
             android:textStyle="bold"
-            android:textColor="@android:color/black"
-            android:fontFamily="@font/gilroysemibold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,47 +39,84 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sempre_que_precisar_estarei_l_medlife_cuidando_do_seu_bem_estar"
-            android:textColor="@android:color/black"
-            android:textSize="12sp"
+            android:textAppearance="@style/TextAppearance.Medlife.Body2"
             android:textAlignment="center"
-            android:fontFamily="@font/gilroymedium"
             app:layout_constraintTop_toBottomOf="@id/logoImage"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"/>
 
-        <EditText
-            android:id="@+id/editCadastroEmail"
+        <!-- Email Input -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:background="@drawable/bg_edit_text"
-            android:ems="10"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress"
-            android:padding="12dp"
-            android:textSize="14sp"
-            android:fontFamily="@font/gilroymedium"
+            app:boxBackgroundMode="outline"
+            app:boxCornerRadiusBottomEnd="4dp"
+            app:boxCornerRadiusBottomStart="4dp"
+            app:boxCornerRadiusTopEnd="4dp"
+            app:boxCornerRadiusTopStart="4dp"
+            app:boxStrokeColor="@color/input_border_color"
+            app:hintEnabled="false"
             app:layout_constraintTop_toBottomOf="@id/taglineText"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <EditText
-            android:id="@+id/editCadastroSenha"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editCadastroEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:textAppearance="@style/TextAppearance.Medlife.Body1"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/email"
+            android:textAppearance="@style/TextAppearance.Medlife.InputHint"
+            app:layout_constraintStart_toStartOf="@id/emailInputLayout"
+            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"/>
+
+        <!-- Password Input -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@drawable/bg_edit_text"
-            android:ems="10"
-            android:hint="@string/senha"
-            android:inputType="textPassword"
-            android:padding="12dp"
-            android:textSize="14sp"
-            android:password="true"
-            android:fontFamily="@font/gilroymedium"
-            app:layout_constraintTop_toBottomOf="@id/editCadastroEmail"
+            app:boxBackgroundMode="outline"
+            app:boxCornerRadiusBottomEnd="4dp"
+            app:boxCornerRadiusBottomStart="4dp"
+            app:boxCornerRadiusTopEnd="4dp"
+            app:boxCornerRadiusTopStart="4dp"
+            app:boxStrokeColor="@color/input_border_color"
+            app:hintEnabled="false"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/text_secondary_dark"
+            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editCadastroSenha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textAppearance="@style/TextAppearance.Medlife.Body1"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/senha"
+            android:textAppearance="@style/TextAppearance.Medlife.InputHint"
+            app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
+            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"/>
 
         <LinearLayout
             android:id="@+id/linksLayout"
@@ -88,26 +124,24 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/editCadastroSenha"
+            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
                 android:id="@+id/forgotPasswordLink"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/esqueceu_senha"
-                android:textColor="@color/blue_500"
-                android:fontFamily="@font/gilroysemibold"/>
+                android:textAppearance="@style/TextAppearance.Medlife.Link" />
 
             <TextView
                 android:id="@+id/registerLink"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="@string/registrar_se"
-                android:textColor="@color/blue_500"
-                android:fontFamily="@font/gilroysemibold"/>
+                android:textAppearance="@style/TextAppearance.Medlife.Link" />
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
@@ -115,13 +149,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/entrar_com_medlife"
-            android:textAllCaps="false"
-            android:padding="16dp"
             android:layout_marginTop="32dp"
+            android:backgroundTint="@color/medlife_blue_login"
             app:icon="@drawable/baseline_login_24"
-            app:iconGravity="start"
-            android:backgroundTint="@color/blue_500"
-            android:fontFamily="@font/gilroysemibold"
+            style="@style/Widget.Medlife.Button.Social"
             app:layout_constraintTop_toBottomOf="@id/linksLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -132,7 +163,7 @@
             android:layout_height="wrap_content"
             android:text="@string/ou_conectar_com_m_dia_social"
             android:layout_marginTop="24dp"
-            android:fontFamily="@font/gilroysemibold"
+            android:textAppearance="@style/TextAppearance.Medlife.Body2"
             app:layout_constraintTop_toBottomOf="@id/buttonAcesso"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -142,14 +173,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/continuar_com_google"
-            android:textAllCaps="false"
-            android:padding="16dp"
             android:layout_marginTop="16dp"
             app:icon="@drawable/icons8_google_36"
-            app:iconGravity="start"
-            style="@style/Widget.MaterialComponents.Button"
-            android:backgroundTint="@color/googleLogin"
-            android:fontFamily="@font/gilroysemibold"
+            style="@style/Widget.Medlife.Button.Social"
+            android:backgroundTint="@color/social_button_google"
             app:layout_constraintTop_toBottomOf="@id/socialDivider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -159,15 +186,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/continuar_com_facebook"
-            android:textAllCaps="false"
-            android:padding="16dp"
             android:layout_marginTop="16dp"
             app:icon="@drawable/icons8_facebook_36"
-            app:iconGravity="start"
             app:iconTint="@null"
-            style="@style/Widget.MaterialComponents.Button"
-            android:backgroundTint="@color/color4"
-            android:fontFamily="@font/gilroysemibold"
+            style="@style/Widget.Medlife.Button.Social"
+            android:backgroundTint="@color/social_button_facebook"
             app:layout_constraintTop_toBottomOf="@id/googleButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
