--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color1">#FFFFFF</color>
-    <color name="color2">#779CEC</color>
-    <color name="color3">#1E56A0</color>
-    <color name="color4">#163172</color>
-    <color name="googleLogin">#5383EC</color>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black">#FF000000</color>
 
-    <!-- Adicionados para corrigir erro -->
+    <!-- Core Design Colors -->
+    <color name="background_light">#F6F6F6</color>
+    <color name="text_primary_dark">#030303</color>
+    <color name="text_secondary_dark">#7C7C7C</color>
+    <color name="input_border_color">#E2E2E2</color>
+
+    <!-- Button & Link Colors -->
+    <color name="medlife_blue_login">#779CEC</color>
+    <color name="social_button_google">#5383EC</color>
+    <color name="social_button_facebook">#1E56A0</color>
+    <color name="link_blue">#1E56A0</color>
+
+    <!-- Keeping existing specific blues for potential wider use, if not explicitly consolidated -->
     <color name="blue_500">#2196F3</color>
     <color name="blue_700">#1976D2</color>
     <color name="blue_800">#1565C0</color>
