--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Base button style -->
+    <!-- Base button style for primary actions -->
     <style name="Widget.Medlife.Button" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/gilroysemibold</item>
-        <item name="android:padding">12dp</item>
-        <item name="cornerRadius">8dp</item>
+        <item name="android:padding">16dp</item>
+        <item name="cornerRadius">19dp</item>
     </style>
 
     <!-- Outlined button style -->
@@ -20,38 +20,59 @@
         <item name="strokeWidth">1dp</item>
     </style>
 
+    <!-- Social Login Buttons -->
+    <style name="Widget.Medlife.Button.Social" parent="Widget.Medlife.Button">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconPadding">16dp</item>
+    </style>
+
     <!-- Text appearances -->
     <style name="TextAppearance.Medlife" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:fontFamily">@font/gilroyregular</item>
     </style>
 
     <style name="TextAppearance.Medlife.Headline1" parent="TextAppearance.MaterialComponents.Headline1">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">@color/blue_900</item>
+        <item name="android:textSize">26sp</item>
+        <item name="android:textColor">@color/text_primary_dark</item>
         <item name="android:fontFamily">@font/gilroybold</item>
     </style>
 
     <style name="TextAppearance.Medlife.Headline2" parent="TextAppearance.MaterialComponents.Headline2">
-        <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/blue_900</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/text_primary_dark</item>
         <item name="android:fontFamily">@font/gilroysemibold</item>
     </style>
 
     <style name="TextAppearance.Medlife.Body1" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/blue_900</item>
-        <item name="android:fontFamily">@font/gilroyregular</item>
+        <item name="android:textColor">@color/text_secondary_dark</item>
+        <item name="android:fontFamily">@font/gilroymedium</item>
     </style>
 
     <style name="TextAppearance.Medlife.Body2" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/blue_700</item>
-        <item name="android:fontFamily">@font/gilroyregular</item>
+        <item name="android:textColor">@color/text_secondary_dark</item>
+        <item name="android:fontFamily">@font/gilroymedium</item>
+    </style>
+
+    <style name="TextAppearance.Medlife.Link" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="android:textColor">@color/link_blue</item>
+        <item name="android:fontFamily">@font/gilroysemibold</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
     <!-- Bottom Navigation Text -->
     <style name="BottomNavigationText" parent="TextAppearance.Medlife.Body2">
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">@font/gilroysemibold</item>
+    </style>
+
+    <!-- Input Field Hint Style -->
+    <style name="TextAppearance.Medlife.InputHint" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="android:textColor">@color/text_secondary_dark</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/gilroymedium</item>
     </style>
 </resources>
